# CANN_TEST

./: README.md
16_32/: CMakeLists.txt  kuozhan_test.cpp  main.cpp
add/: CMakeLists.txt  add_test.cpp
broadcast/: CMakeLists.txt  broadcast_test.cpp  main.cpp
comparescalar_test/: CMakeLists.txt  comparescalar_test.cpp  main.cpp
div_test/: CMakeLists.txt  div_test.cpp  main.cpp
e_h/: CMakeLists.txt  e_h_test.cpp  main.cpp
gatherMask_test/: CMakeLists.txt  gatherMask_test.cpp  main.cpp
gather_test/: CMakeLists.txt  gather_test.cpp  main.cpp
scatter_test/: CMakeLists.txt  main.cpp  scatter_test.cpp
